# jurba-media-fastapi

./: .gitignore  docker-compose.yml
backend/: Dockerfile  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2022_09_06_1637-325c58b028bb_initial.py
backend/api/: auth.py
backend/core/: auth.py  config.py  security.py
backend/crud/: user.py
backend/database/: database.py
backend/models/: user.py
frontend/: .gitignore  package.json
frontend/pages/: _admin.js  admin.js  index.js
frontend/styles/: Home.module.css  globals.css
