[tool.poetry]
name = "jurba-media"
version = "0.1.0"
description = ""
authors = ["Demaga <demaga@i.ua>"]
readme = "README.md"
packages = [{include = "jurba_media"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.82.0"
uvicorn = "^0.18.3"
SQLAlchemy = "^1.4.40"
python-dotenv = "^0.21.0"
psycopg2 = "^2.9.3"
alembic = "^1.8.1"
sqladmin = "^0.5.0"

[tool.poetry.group.dev.dependencies]
fastapi = "^0.82.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
